--- a/homepage.html
+++ b/homepage.html
@@ -31,6 +31,12 @@
                 <p class="about_text4">- Повільні вуглеводи — стабільна енергія</p>
                 <p class="about_text5">- Без промислових дріжджів (!)</p>
             </div>
+            <div class="background2">
+                <h1>Випічка та товари</h1>
+                <img class="stiker1" src="sticker1.webp"/>
+                <img class="stiker2" src="sticker4.webp"/>
+                <img class="stiker3" src="sticker6.webp"/>
+            </div>
         </main>
         <footer>
 
