--- a/homepage.html
+++ b/homepage.html
@@ -108,21 +108,18 @@
             </svg>
               <div class="open_time">
                 <p class="open_time_name">Робочі години</p>
-                <div class="line1"></div>
                 <p class="weekdays">Пн-Пт 7:00 - 20:00</p>
                 <p class="weekends">Сб-Нд 8:00 - 21:00</p>
                 <p class="holiday_days">Ми також відкриті у святкові дні</p>
               </div>  
               <div class="ours_bakerys">
                 <p class="ours_bakerys_name">Наші пекарні</p>
-                <div class="line2"></div>
-                <p class="adress1">Київ, вул Жилянська, 25</p>
-                <p class="adress2">Київ, вул. Ярославів Вал, 20 </p>
-                <p class="adress3">Київ, вул. Нижній Вал, 19-21 </p>
+                <p class="adress1"><img class="location1" src="location_icon.webp"/>Київ, вул Жилянська, 25</p>
+                <p class="adress2"><img class="location2" src="location_icon.webp"/>Київ, вул. Ярославів Вал, 20 </p>
+                <p class="adress3"><img class="location3" src="location_icon.webp"/>Київ, вул. Нижній Вал, 19-21 </p>
               </div>
               <div class="our_social">
                 <p class="ours_social_name">Ми у соцмережах</p>
-                <div class="line3"></div>
                 <img class="facebook" src="facebook.webp"/>
                 <img class="instagram" src="instagram.webp"/>
               </div>
