--- a/corb_page.html
+++ b/corb_page.html
@@ -15,7 +15,8 @@
                 <a href="">Відгуки</a>
                 <p class="find">Пошук</p> 
                 <button class="find_button">Знайти</button>
-                <button class="corb_button">Кошик<img src="shopping-cart.webp"/></button>
+                <button class="corb_button">Кошик<img src="shopping_corb.webp"/></button>
+                <p class="null">0</p>
             </nav>
          </header>
          <main>
