--- a/corb_page_order.html
+++ b/corb_page_order.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <link rel="stylesheet" type="text/css" href="corb_page2.css">
+        <link rel="stylesheet" type="text/css" href="./css/corb_page.css">
         <title>CHLIEB</title>
     </head>
     <body>
@@ -15,9 +15,9 @@
                 <a href="">Відгуки</a>
                 <p class="find">Пошук</p> 
                 <button class="find_button">Знайти</button>
-                <button class="corb_button">Кошик<img src="shopping_corb.webp"/></button>
-                <p class="null">0</p>
-            </nav>
+             <div class="cart-container-button" onclick="goToCart()">
+                        <button class="corb_button">Кошик<span class="cart-counter">0</span><img src="shopping_corb.webp"/></button>
+                    </div>            </nav>
         </header>
         <main>
             <h1>Оформити замовлення</h1>
