--- a/corb_page_order.html
+++ b/corb_page_order.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <link rel="stylesheet" type="text/css" href="./css/corb_page.css">
+        <link rel="stylesheet" type="text/css" href="./css/corb_page_order.css">
         <title>CHLIEB</title>
     </head>
     <body>
@@ -13,11 +13,14 @@
                 <a href="">Товари</a> 
                 <a href="">Про нас</a> 
                 <a href="">Відгуки</a>
-                <p class="find">Пошук</p> 
-                <button class="find_button">Знайти</button>
-             <div class="cart-container-button" onclick="goToCart()">
+                <form id="searchForm" role="search">
+                    <input class="form-control" type="search" placeholder="Пошук" aria-label="Search"> 
+                    <button class="btn-search" type="submit">Знайти</button>
+                </form> 
+                <div class="cart-container-button" onclick="goToCart()">
                         <button class="corb_button">Кошик<span class="cart-counter">0</span><img src="shopping_corb.webp"/></button>
-                    </div>            </nav>
+                </div>            
+            </nav>
         </header>
         <main>
             <h1>Оформити замовлення</h1>
@@ -62,5 +65,6 @@
                 <img class="instagram" src="instagram.webp"/>
               </div>
         </footer>
+        <script src = "script.js"></script>
     </body>
 </html>
