--- a/corb_page.html
+++ b/corb_page.html
@@ -30,8 +30,8 @@
             <div class="card-container">
 
             </div>
-            <p class="your_order">Сума замовлення: <span class = "price">0</span> грн.</p>
-            <button><a href="">Оформити замовлення</a></button>
+            <p class="your_order">Сума замовлення: <span class = "price">0.00</span> грн.</p>
+            <button class="place-order" onclick="goToCorb()">Оформити замовлення</button>
          </main>
          <footer>
             <svg class="logo_footer" width="122" height="94" viewBox="0 0 122 94" fill="none" xmlns="http://www.w3.org/2000/svg">
